Style recipe pages

--- a/css/style.css
+++ b/css/style.css
@@ -30,5 +30,47 @@
 
 img {
     height:auto;
-    width: 700px;
+    width: 600px;
+}
+
+p {
+    text-align: center;
+    color:lightpink;
+    background-color:green;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.description1,
+.description2,
+.description3 {
+    text-align: center;
+    color: blue;
+    font-weight: 700;
+}
+
+.header1,
+.header2,
+.header3 {
+    text-align: center;
+    font-size: 50px;
+    font-family: "Times New Roman", sans-serif;
+}
+
+.header1 {
+    background-color: red;
+    color: green;
+}
+
+.header2 {
+    background-color: orange;
+    color: purple;
+}
+
+.header3 {
+    background-color: yellow;
+    color: pink;
+}
+
+li {
+   color: red; 
 }
